Tom Berg 10/31/2020 -- Implement link to edit site data. Also added link(looks like button) for editing metadata but it doesn't have a location yet as metadata editing page is in progress. Also got rid of double scrollbars bug on microclimate page and added pointer cursor when hovering over the filter tab.

--- a/src/main/resources/static/css/microclimate.css
+++ b/src/main/resources/static/css/microclimate.css
@@ -191,4 +191,12 @@ button[data-add="group"] {
   #help-tab a {
     color: #05ccff; }
 
+div#sidemenu-popup-bar {
+  cursor: pointer;
+  height:90%
+}
+div#sidemenu-popup {
+  transition: .5s;
+}
+
 /*# sourceMappingURL=microclimate.css.map */
